fix overflow infos

--- a/src/pages/Infos/Infos.css
+++ b/src/pages/Infos/Infos.css
@@ -39,11 +39,7 @@
 
     font-size: 1.6rem;
 
-    /* overflow: hidden; */
-}
-
-* {
-    /* border: red solid 1px; */
+    overflow: hidden;
 }
 
 /* Tags */
